<!--
  ~ Zeljko Bilbija Copyright (c) 2019.  All rights reserved
  -->

<resources>
    <string name="app_name">Swoosh</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="find_a_team_in_your_city_dominate_the_league"><![CDATA[Find a team in your city & dominate the league]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="logo">Logo</string>
    <string name="bacground">bacground</string>
    <string name="bgMain">BG MAIN IMAGE VIEW</string>
    <string name="mens">MENS</string>
    <string name="desired_league">Desired League</string>
    <string name="co_ed">Co-ed</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="womens">WOMENS</string>
    <string name="todo">TODO</string>
    <string name="leagueButton">League Button</string>
</resources>
